[gd_scene load_steps=18 format=3 uid="uid://bm6ytyxvbceh0"]

[ext_resource type="Texture2D" uid="uid://b3723x1ovx18d" path="res://assets/sprites/tower1.png" id="1_h2pjr"]
[ext_resource type="Script" path="res://scripts/tower.gd" id="1_v8t2a"]
[ext_resource type="Texture2D" uid="uid://i2j4kvn0w7q4" path="res://assets/sprites/range.png" id="2_ryqgt"]
[ext_resource type="Texture2D" uid="uid://du6xscvmfx8l8" path="res://assets/sprites/towerselection.png" id="3_ksutm"]
[ext_resource type="Texture2D" uid="uid://bqxjks1khgpr4" path="res://assets/sprites/tower1upgrade1.png" id="4_gubpj"]
[ext_resource type="Texture2D" uid="uid://cyvmiovifx22h" path="res://assets/sprites/tower1upgrade2.png" id="5_kp04t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0cbx"]
size = Vector2(64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xedab"]
atlas = ExtResource("2_ryqgt")
region = Rect2(0, 0, 2000, 2000)

[sub_resource type="SpriteFrames" id="SpriteFrames_ocubu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xedab")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fxpcc"]
atlas = ExtResource("3_ksutm")
region = Rect2(0, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_7prn5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxpcc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p5m64"]
atlas = ExtResource("1_h2pjr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nd3ji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5m64")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qgw7p"]
atlas = ExtResource("4_gubpj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ohimc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgw7p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mvpva"]
atlas = ExtResource("5_kp04t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_luw1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvpva")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GunTower" type="Node2D"]
script = ExtResource("1_v8t2a")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("RectangleShape2D_p0cbx")

[node name="Range" type="Node2D" parent="."]

[node name="RangeSprite" type="AnimatedSprite2D" parent="Range"]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_ocubu")

[node name="Selection" type="Node2D" parent="."]
visible = false

[node name="SelectionSprite" type="AnimatedSprite2D" parent="Selection"]
sprite_frames = SubResource("SpriteFrames_7prn5")

[node name="Levels" type="Node2D" parent="."]

[node name="Upgrade0" type="Node2D" parent="Levels"]

[node name="Upgrade0Sprite" type="AnimatedSprite2D" parent="Levels/Upgrade0"]
sprite_frames = SubResource("SpriteFrames_nd3ji")

[node name="Upgrade1" type="Node2D" parent="Levels"]
visible = false

[node name="Upgrade1Sprite" type="AnimatedSprite2D" parent="Levels/Upgrade1"]
sprite_frames = SubResource("SpriteFrames_ohimc")

[node name="Upgrade2" type="Node2D" parent="Levels"]
visible = false

[node name="Upgrade2Sprite" type="AnimatedSprite2D" parent="Levels/Upgrade2"]
sprite_frames = SubResource("SpriteFrames_luw1d")

[connection signal="input_event" from="CollisionArea" to="." method="_on_collision_area_input_event"]
[connection signal="mouse_entered" from="CollisionArea" to="." method="_on_collision_area_mouse_entered"]
[connection signal="mouse_exited" from="CollisionArea" to="." method="_on_collision_area_mouse_exited"]
